<!-- activity_main.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image"
        android:contentDescription="@string/background_image_description"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="210dp"
        android:layout_height="85dp"
        android:layout_centerInParent="true"
        android:background="#32073A"
        android:text="@string/get_started"
        android:textSize="25sp"
        android:contentDescription="@string/start_button_description"
        android:textColor="#FFFFFF" />

</RelativeLayout>
